生徒新規登録create,newアクション作成しました

--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -18,7 +18,7 @@
             <%= f.password_field :password, class: "input" %>
           </div>
         </div>
-        <a href="#">新規登録はこちら</a>
+        <a href="student_sign_up">新規登録はこちら</a>
         <input type="submit" class="btn" value="Login">
       <% end %>
     </div>
