--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,7 +1,7 @@
 <%= render partial: 'share/header' %>
 
 <section class="student_profile_section">
-  <%= render partial: 'share/student-and-teacher', locals: {teacher_url: "/teachers/edit"} %>
+<%= render partial: 'share/title', locals: {each_title: 'プロフィール'} %>
 
   <div class="student-card-wrapper">
     <div class="student-profile">
