--- a/app/views/home/student_sign_up.html.erb
+++ b/app/views/home/student_sign_up.html.erb
@@ -1,28 +1,28 @@
 <section>
   <div class="top_container">
     <div class="login_container">
-      <%= form_for(:session, method: :post, url: 'sessions/create') do |f| %>
+      <%= form_for(@user, url: 'student_users/create') do |f| %>
         <%= image_tag "plant.jpg", class: "open_door_img" %>
         <h2 class="font-italic">sign up</h2>
         <div class="input_div first_input_div">
           <i class="fas fa-user"></i>  
           <div>
             <h5 class="font-italic">Full Name</h5>
-            <%= f.text_field :name, class: "input" %>
+            <%= f.text_field :full_name, class: "form-control" %>
           </div>
         </div>
         <div class="input_div second_input_div">
           <i class="fas fa-lock"></i>  
           <div>
             <h5 class="font-italic stu_sign_in_password">Password</h5>
-            <%= f.password_field :password, class: "input" %>
+            <%= f.password_field :password, class: "form-control" %>
           </div>
         </div>
         <div class="input_div second_input_div">
           <i class="fas fa-lock"></i>  
           <div>
             <h6 class="font-italic stu_sign_in_password">Confirmation</h6>
-            <%= f.password_field :password, class: "input" %>
+            <%= f.password_field :password, class: "form-control" %>
           </div>
         </div>
         <input type="submit" class="btn stu_sign_in_btn" value="Sign In">
