生徒と先生の紐付けのビューを編集

--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -24,9 +24,11 @@
           </div>
         </div>
         <% else %>
-          <button type="button" class="btn btn-outline-primary">
-            追加
-          </button>
+          <div>
+            <button type="button" class="btn btn-outline-primary">
+              追加
+            </button>
+          </div>
         <% end %>
       </div>
       <% end %>
