--- a/app/assets/stylesheets/students.scss
+++ b/app/assets/stylesheets/students.scss
@@ -50,10 +50,12 @@
   align-items: center;
   padding: 0 0 0 20px;
   border-radius: 8px;
+  flex-shrink: 0;
 }
 .student-index-card a {
   margin-left: 20px;
   font-size: 15px;
+  width: 100%;
   font-weight: bold;
   display: block;
   cursor: pointer;
@@ -75,6 +77,7 @@
   border-radius: 50%;
   color: white;
   background-color: #000066;
+  display: block;
 }
 
 .student-profile-img-self.index {
