--- a/app/views/home/teacher_sign_up.html.erb
+++ b/app/views/home/teacher_sign_up.html.erb
@@ -1,14 +1,14 @@
 <section>
   <div class="top_container">
     <div class="login_container">
-      <%= form_for(:session, method: :post, url: 'sessions/create') do |f| %>
+      <%= form_for(@teacher, url: 'teacher_users/create') do |f| %>
         <%= image_tag "plant.jpg", class: "open_door_img" %>
         <h2 class="font-italic">sign up</h2>
         <div class="input_div first_input_div">
           <i class="fas fa-user"></i>  
           <div>
             <h5 class="font-italic">Full Name</h5>
-            <%= f.text_field :name, class: "input" %>
+            <%= f.text_field :full_name, class: "input" %>
           </div>
         </div>
         <div class="input_div second_input_div">
@@ -22,10 +22,17 @@
           <i class="fas fa-lock"></i>  
           <div>
             <h6 class="font-italic stu_sign_in_password">Confirmation</h6>
-            <%= f.password_field :password, class: "input" %>
+            <%= f.password_field :password_confirmation, class: "input" %>
           </div>
         </div>
-        <input type="submit" class="btn stu_sign_in_btn" value="Sign In">
+        <div class="input_div second_input_div">
+          <i class="fas fa-lock"></i>  
+          <div>
+            <h6 class="font-italic stu_sign_in_password">Subject</h6>
+            <%= f.text_field :subject, class: "form-control" %>
+          </div>
+        </div>
+        <%= f.submit "Sign In",class:"btn stu_sign_in_btn" %>
       <% end %>
       <p>
         ここでは先生の新しいアカウントを作成します。
