--- a/app/views/share/_header.html.erb
+++ b/app/views/share/_header.html.erb
@@ -3,7 +3,9 @@
     <div class="nav_self bg-dark p-4">
       <div class="self_img">  
       <% if @current_user&.image %>
+      <% if @current_user.image.present? %>
         <%= image_tag @current_user.image.url, class: "self_profile" %>
+      <% end %>
       <% else %>
         <%= image_tag "self-profile.jpg", class: "self_profile" %>
       <% end %>
