--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -3,31 +3,26 @@
 
 <div class="new_msg_container" style="margin: 0 150px;">
     <%= render partial: 'share/title', locals: {each_title: 'New Comment'} %>
-    <form>
+    <%= form_for @message do |f| %>
       <div class="choise_student">
         <div class="form-row align-items-center">
           <div class="col-auto my-1">
-            <label for="inlineFormCustomSelect">Preference</label>
-            <select class="custom-select mr-sm-2" id="inlineFormCustomSelect">
-              <option selected>Kosuke Fujita</option>
-              <option value="1">Gen Nakamura</option>
-              <option value="2">Soichi Kubota</option>
-              <option value="3">Hiroharu Hara</option>
-            </select>
+            <label for="inlineFormCustomSelect">生徒を選択</label>
+            <%= f.collection_select(:student_id, @current_teacher.students, :id, :full_name, class: "custom-select mr-sm-2", id: "inlineFormCustomSelect") %>
           </div>
         </div>
       </div>
       <div class="new_msg_text">
         <div class="form-group">
-          <label for="exampleFormControlTextarea1">Example textarea</label>
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          <label for="exampleFormControlTextarea1">メッセージ</label>
+          <%= f.text_area :comment, class: "form-control", rows: 3, id: "exampleFormControlTextarea1" %>
         </div>
       </div>
       <div class="submit_new_msg">
         <div class="col-auto my-1">
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <%= f.submit "Submit", class: "btn btn-primary" %>
         </div>
       </div>
-    </form>
+    <% end %>
   </div>
 </section>
