ストップウォッチエラーメッセージの表示

--- a/app/views/news/new_learning_history.html.erb
+++ b/app/views/news/new_learning_history.html.erb
@@ -25,6 +25,9 @@
       </div>
     </div>
 
+    <div id="attention-message" style="font-size: 13px;">ストップウォッチ起動中はページ遷移しないで下さい。<br>遷移したい場合は<span style="color: red;">リセット</span>するか学習を<span style="color: red;">完了</span>させてください。</div>
+
+
     <div id="new_history_buttons">
       <div class="each_history_buttons" id="before_start">
         <input type="button" class="myButton start" id="startbtn" onclick="startTimer()" value="スタート" >
