--- a/app/views/teachers/show_calender.html.erb
+++ b/app/views/teachers/show_calender.html.erb
@@ -32,84 +32,86 @@
     <% else %>
     <div id="student<%= i %>" class="tab-pane test_score_contaner">
     <% end %>
-    <div class="calendar_wrapper">
-      <p class="calendar_stu_title">
-        <i class="far fa-calendar-alt"></i>
-        <%= s.full_name %>君のカレンダー    
-        <button type="button" class="btn btn-dark">
-          今月の予定 <span class="badge badge-light"><%= s.events.length %></span>
-        </button>
-      </p>
+      <div class="calendar_wrapper">
+        <p class="calendar_stu_title">
+          <i class="far fa-calendar-alt"></i>
+          <%= s.full_name %>君のカレンダー    
+          <button type="button" class="btn btn-dark">
+            今月の予定 <span class="badge badge-light"><%= s.events.length %></span>
+          </button>
+        </p>
 
-      <div class="submit_new_msg">
-        <div class="my-3 submit_new_msg1">
-        <a href="/events/new" type="submit" class="btn btn-primary">
-          カレンダーに授業を追加する
-        </a>
-        </div>
-      </div>
-
-      <%= month_calendar attribute: :start,events: s.events  do |date, events| %>
-        <%= date.day %>
-
-        <% events.each do |e| %>
-
-          <div>
-            <%= link_to e.title, e %>
+        <div class="submit_new_msg">
+          <div class="my-3 submit_new_msg1">
+          <a href="/events/new" type="submit" class="btn btn-primary">
+            カレンダーに授業を追加する
+          </a>
           </div>
-        <% end %>
-      <% end %>  
+        </div>
+
+        <%= month_calendar attribute: :start,events: s.events  do |date, events| %>
+          <%= date.day %>
+
+          <% events.each do |e| %>
+
+            <div>
+              <%= link_to e.title, e %>
+            </div>
+          <% end %>
+        <% end %>  
+      </div>
+
+      <div class="events_index_wrapper">
+      <% s.events.each do |e| %>
+        <div class="event_card">
+          <div style="display: grid;grid-template-columns: 80% 20%;" class="left">
+          <% if e.title? %>
+          <div>
+            <h3 style="color: #fff;font-size: 24px;"><%= e.title%></h3>
+          </div>
+          <div style="color: #fff;">
+          <a href="#" style="color: #fff;font-size: 13px;">削除</a>
+          <a href="#" style="color: #fff;font-size: 13px;">編集</a>
+          </div>
+          <% else %>
+          <div>
+            <h3 style="color: #fff;font-size: 24px;">記載なし</h3>
+          </div>
+          <div style="color: #fff;">
+          <a href="#" style="color: #fff;font-size: 13px;">削除</a>
+          <a href="#" style="color: #fff;font-size: 13px;">編集</a>
+          </div>
+          <% end %>
+            <small style="color: #eee;"><%= e.start.to_s(:datetime_jp)%></small>
+          </div>
+          <div class="right">
+            <span class="badge badge-info">
+            <% if e.subject? %>
+              <small><%= e.subject %></small>
+            <% else %>
+              <small>記載なし</small>
+            <% end %>
+            </span>
+            <% if e.description? %>
+            <h4 style="font-size: 20px; margin: 7px 0"><%= e.description %></h4>
+            <% else %>
+            <h4 style="font-size: 20px; margin: 7px 0">記載なし</h4>
+            <% end %>
+            <small><%= e.start.to_s(:datetime_jp) %> ~ <%= e.end.to_s(:datetime_jp) %></small>
+            <div class="homework_wrapper">
+              <div><p>宿題</p></div>
+              <% if e.homework? %>
+              <div><p><%= e.homework %></p></div>
+              <% else %>
+              <div><p>記載なし</p></div>
+              <% end %>
+            </div>
+          </div>
+        </div>
+      <% end %>
     </div>
 
     </div>
   <% end %>
-</div>
-<div class="events_index_wrapper">
-  <% @events.each do |e| %>
-    <div class="event_card">
-      <div style="display: grid;grid-template-columns: 80% 20%;" class="left">
-      <% if e.title? %>
-      <div>
-        <h3 style="color: #fff;font-size: 24px;"><%= e.title%></h3>
-      </div>
-      <div style="color: #fff;">
-      <a href="#" style="color: #fff;font-size: 13px;">削除</a>
-      <a href="#" style="color: #fff;font-size: 13px;">編集</a>
-      </div>
-      <% else %>
-      <div>
-        <h3 style="color: #fff;font-size: 24px;">記載なし</h3>
-      </div>
-      <div style="color: #fff;">
-      <a href="#" style="color: #fff;font-size: 13px;">削除</a>
-      <a href="#" style="color: #fff;font-size: 13px;">編集</a>
-      </div>
-      <% end %>
-        <small style="color: #eee;"><%= e.start.to_s(:datetime_jp)%></small>
-      </div>
-      <div class="right">
-        <span class="badge badge-info">
-        <% if e.subject? %>
-          <small><%= e.subject %></small>
-        <% else %>
-          <small>記載なし</small>
-        <% end %>
-        </span>
-        <% if e.description? %>
-        <h4 style="font-size: 20px; margin: 7px 0"><%= e.description %></h4>
-        <% else %>
-        <h4 style="font-size: 20px; margin: 7px 0">記載なし</h4>
-        <% end %>
-        <small><%= e.start.to_s(:datetime_jp) %> ~ <%= e.end.to_s(:datetime_jp) %></small>
-        <div class="homework_wrapper">
-          <div><p>宿題</p></div>
-          <% if e.homework? %>
-          <div><p><%= e.homework %></p></div>
-          <% else %>
-          <div><p>記載なし</p></div>
-          <% end %>
-        </div>
-      </div>
-    </div>
-  <% end %>
+
 </div>
