メッセージ送信ページのデザイン整えました

--- a/app/assets/stylesheets/title.scss
+++ b/app/assets/stylesheets/title.scss
@@ -1,5 +1,6 @@
 .share_title {
-  padding: 15px 60px;
+  text-align: center;
+  padding: 15px 0px;
   background: white;
   font-family: 'Times New Roman', Times, serif;
 }
