--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -34,7 +34,11 @@
     <div class="your_teachers_list">
       <div class="your_teacher_list">
         <div class="your_teacher_img">
+        <% if @current_student.teacher.image.present? %>
           <%=image_tag @current_student.teacher.image.url, class: "your_teacher_img_self" %>
+        <% else %>
+          <p>画像が設定されていません</p>
+        <% end %>
         </div>
         <div class="your_teacher_name">
           <h5><%=@current_student.teacher.full_name %></h5>
