--- a/app/views/students/show_test.html.erb
+++ b/app/views/students/show_test.html.erb
@@ -18,7 +18,7 @@
     </div>
   </div>
   <div class="test_history_score_list">
-    <% @test.each do |t| %>
+    <% @test.sort.reverse.each do |t| %>
     <div class="each_test_history_score_card">
       <div class="each_test_history_score_card_upper">
         <div>
