得点表示修正しました

--- a/app/views/students/show_test.html.erb
+++ b/app/views/students/show_test.html.erb
@@ -25,7 +25,7 @@
           <%= t.name %>
         </div>
         <div>
-          得点(率)<%= t.score %>
+          得点率<%= t.score %>
         </div>
         <div>
           評価<%= t.grade %>
@@ -33,7 +33,7 @@
       </div>
       <div class="each_test_history_score_card_bottom">
         <div>
-          ( 平均点(率)： <%= t.average_score %> )
+          ( 合格得点率： <%= t.average_score %> )
         </div>
         <div>
           テスト実施日 <%= t.date %>
