--- a/app/views/teachers/show_test.erb
+++ b/app/views/teachers/show_test.erb
@@ -67,7 +67,7 @@
             <%= t.name %>
           </div>
           <div>
-            得点(率)<%= t.score %>
+            得点率<%= t.score %>
           </div>
           <div>
             評価<%= t.grade %>
@@ -75,7 +75,7 @@
         </div>
         <div class="each_test_history_score_card_bottom">
           <div>
-            ( 平均点(率)： <%= t.average_score %> )
+            ( 合格得点率： <%= t.average_score %> )
           </div>
           <div>
             テスト実施日 <%= t.date %>
