--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -29,7 +29,15 @@
   <div class="teacher_card">
     <div class="teacher_card_info">
       <div class="teacher_card_info_img">
-        <%=image_tag e.teacher.image.url , class: "teacher_card_info_img_self" %>
+      <% if e.teacher.present? %>
+        <% if e.teacher.image.present? %>
+          <%=image_tag e.teacher.image.url , class: "teacher_card_info_img_self" %>
+        <% else %>
+          <p class="stu_card_info_img_self" style="font-size: 14px;">画像<br>なし</p>
+        <% end %>
+      <% else %>
+        <div></div>
+      <% end %>
       </div>
       <div class="teacher_card_info_name">
         <h5><%= e.teacher.full_name %>先生</h5>
