newsfiledpageのデザイン変えました

--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -42,7 +42,7 @@
 .balloon {
   position: relative;
   margin: 1.5em 0;
-  padding: 20px;
+  padding: 10px 20px;
   color: black;
   font-size: 14px;
   background: linear-gradient(to right, #DCDCDC, #D3D3D3, #DCDCDC);
