--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -29,15 +29,15 @@
   <div class="teacher_card">
     <div class="teacher_card_info">
       <div class="teacher_card_info_img">
-      <% if e.teacher.present? %>
-        <% if e.teacher.image.present? %>
-          <%=image_tag e.teacher.image.url , class: "teacher_card_info_img_self" %>
+        <% if e.teacher.present? %>
+          <% if e.teacher.image.present? %>
+            <%=image_tag e.teacher.image.url , class: "teacher_card_info_img_self" %>
+          <% else %>
+            <p class="stu_card_info_img_self" style="font-size: 14px;">画像<br>なし</p>
+          <% end %>
         <% else %>
-          <p class="stu_card_info_img_self" style="font-size: 14px;">画像<br>なし</p>
+          <div></div>
         <% end %>
-      <% else %>
-        <div></div>
-      <% end %>
       </div>
       <div class="teacher_card_info_name">
         <h5><%= e.teacher.full_name %>先生</h5>
@@ -48,7 +48,12 @@
     </div>
     <div class="balloon_teacher">
       <div class="teacher_card_comment">
+      <% if @current_student.present? %>
         <p><%= e.comment %></p>
+      <% else %>
+        <p style="font-size: 11px;">To: <%= e.student.full_name %>君</p>
+        <p><%= e.comment %></p>
+      <% end %>
       </div>
     </div>
   </div>
