--- a/app/views/share/_student-history.erb
+++ b/app/views/share/_student-history.erb
@@ -1,17 +1,20 @@
 <div class="balloon">
-  <div class="stu_card_comment">
-    <p><%= variable.comment %></p>
-  </div>
   <div class="stu_card_content">
     <div class="stu_card_content_subject">
-      <p class="stu_card_content_subject_circle"><%= variable.subject[0, 1] %></p>
+      <p class="stu_card_content_subject_circle" style="margin-bottom: 5px;"><%= variable.subject[0, 1] %></p>
     </div>
     <div class="stu_card_content_text">
-      <span class= "stu_card_content_text_subject">教材: </span><span><%= variable.learning_text %></span>
+      <span class= "stu_card_content_text_subject" style="font-size: 12px;">教材: </span>
+      <span style="font-size: 12px;"><%= variable.learning_text %></span>
     </div>
   </div>
+  <div class="stu_card_comment">
+    <p style="font-size: 12px;margin-bottom: 5px;"><%= variable.comment %></p>
+  </div>
   <div class="stu_card_content_time">
-    <p><%= variable.learning_time.to_s(:time_jp) %></p>
+    <div style="background-color: #0000AA;margin: 0 25%;border-radius: 15px;">
+      <p style="font-size: 13px;padding: 5px 0px;margin: 0 20%;color: white;">学習時間<br><%= variable.learning_time.to_s(:time_jp) %></p>
+    </div>
   </div>
 </div>
   
