テスト削除ボタン追加

--- a/app/views/share/_student-history.erb
+++ b/app/views/share/_student-history.erb
@@ -1,4 +1,4 @@
-<div class="balloon">
+<div class="balloon" style="margin-top: 0px;">
   <div class="stu_card_content">
     <div class="stu_card_content_subject">
       <p class="stu_card_content_subject_circle" style="margin-bottom: 5px;"><%= variable.subject[0, 1] %></p>
