--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -5,7 +5,7 @@
   <% @news.each do |e| %>
   <% if e.try(:subject) %>
   <div class="stu_card">
-    <div class="stu_card_info">
+    <div class="stu_card_info" style="margin-bottom: 20px;">
       <div class="stu_card_info_img">
       <% if e.student.image.present? %>
         <%= image_tag e.student.image.url, class: "stu_card_info_img_self" %>
@@ -17,7 +17,7 @@
         <h5><%= e.student.full_name %>君</h5>
       </div>
       <div class="stu_card_info_time_ago">
-        <p><%= e.created_at.to_s(:datetime_jp) %></p>
+        <p style="margin-bottom: 5px;"><%= e.created_at.to_s(:datetime_jp) %></p>
       </div>
     </div>
     
