--- a/app/views/teachers/show_test.erb
+++ b/app/views/teachers/show_test.erb
@@ -13,7 +13,7 @@
 <div class="show_test_student_list">
   <ul class="nav nav-tabs">
     <% @students.each_with_index do |s, i| %>
-    <li class="nav-item">
+    <li class="nav-item" style="margin-bottom: -3px;">
       <% if i == 0 %>
       <a href="#student<%= i %>" class="nav-link active" data-toggle="tab">
       <% else %>
@@ -39,7 +39,7 @@
   <div id="student<%= i %>" class="tab-pane test_score_contaner">
   <% end %>
 
-    <div class="test_socre_graph_container">
+    <div class="test_socre_graph_container" style="padding-bottom: 10px;">
       <div class="test_socre_graph_container_border">
         <div class="test_socre_graph_title">
           <%= s.full_name %>君の得点推移
@@ -80,6 +80,9 @@
           <div>
             テスト実施日 <%= t.date %>
           </div>
+        </div>
+        <div style="color: #fff;text-align: right;">
+          <a href="#" style="color: #fff;font-size: 13px;">削除</a>
         </div>
       </div>
       <% end %>
