画像なし表記にしました

--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -40,7 +40,7 @@
           <% if s.image.present? %>
             <%=image_tag s.image.url, class: "your_student_img_self" %>
           <% else %>
-          生徒の画像が<br>設定されていません
+          画像なし
           <% end %>
         </div>
         <div class="your_student_name">
