--- a/app/views/teachers/show_test.erb
+++ b/app/views/teachers/show_test.erb
@@ -22,7 +22,7 @@
       <% if s.image.present? %>
         <%= image_tag s.image.url, class: "stu_card_info_img_circle" %>
       <% else %>
-      生徒の画像が<br>設定されていません
+      画像なし
       <% end %>
         <h5><%= s.full_name %>君</h5>
       </a>
