先生と生徒の紐付け解除を実装

--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -49,6 +49,7 @@
         <div class="your_student_school">
           <p><%=s.school_of_choice %>志望</p>
         </div>
+        <%= link_to "削除", "/students/#{s.id}/unfasten", class: "btn btn-danger", method: :delete %> 
       </div>
       <% end %>
     </div>
